samples/initContainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - image: nginx 
      name: nginx
      imagePullPolicy: Always
