samples/nginxDebugPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-debug
spec:
  containers:
    - image: nginx
      name: nginx
