samples/deploymentWithService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      type: nginx-deployment-pod
  template:
    metadata:
      labels:
        type: nginx-deployment-pod
    spec:
      containers:
        - image: nginx:stable
          name: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-services
spec:
  type: NodePort
  selector:
    type: nginx-deployment-pod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30950
