samples/ingressController.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
     kubernetes.io/ingress.class: "gce"
spec:
  rules: 
    - http:
        paths:
          # - path: /nginx
          #   pathType: Prefix
          #   backend: 
          #     service:
          #       name: nginx-service
          #       port: 
          #         number: 80
          - path: /nginx
            pathType: ImplementationSpecific
            backend: 
              service:
                name: headless-nginx-service
                port: 
                  number: 80
